--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <img src="./assets/img/slider/ava1.jpg" alt="cooffee" class="card-thumnail-ava">
                     <div class="card-about">
                         <p class="card-title card-title-fb">
-                            Ms. Phương Linh
+                            Ms. Khanh Linh
                         </p>  
                         <p class="card-dsc-fb">
                             “ Tôi rất hài lòng về thái độ phục vụ của quán, cafe đa
@@ -253,7 +253,7 @@
                     <img src="./assets/img/slider/ava2.jpg" alt="cooffee" class="card-thumnail-ava">
                     <div class="card-about">
                         <p class="card-title card-title-fb">
-                            Mrs. Bảo Thy
+                            Mrs. Bao Thy
                         </p>  
                         <p class="card-dsc-fb">
                             “ Tôi rất hài lòng về thái độ phục vụ của quán, cafe đa
@@ -266,7 +266,7 @@
                     <img src="./assets/img/slider/ava3.png" alt="cooffee" class="card-thumnail-ava">
                     <div class="card-about">
                         <p class="card-title card-title-fb">
-                            Mrs. Thùy Chi
+                            Mrs. Thuy Chi
                         </p>  
                         <p class="card-dsc-fb">
                             “ Tôi rất hài lòng về thái độ phục vụ của quán, cafe đa
@@ -301,7 +301,7 @@
                     </div>
                     <div class="form-booking col l-8 m-12 c-10">
                         <h3 class="section-heading white-color pt-50 mb-24">Bạn có muốn đặt bàn ?</h3>
-                        <p class="mark white-color mb-24 pb-20-sm">Gọi ngay cho chúng tôi để đặt</p>
+                        <p class="mark white-color mb-24 pb-20-sm">Call we now !!!</p>
                         <div class="form-active">
                             <div class="row pl-48-md pl-25-sm">
                                 <form action="" class=" form-field col l-6 ">
@@ -465,7 +465,7 @@
                             </li>
                         </ul>
                         <p>
-                            Coffee House là một chút cảm xúc về Paris của chủ quán là một người rất yêu Paris, nằm trên một con phố nhỏ của Thảo Điền, quận 2. Nếu bạn là người thích ngắm hoa, thì ở đây như một vườn hoa cổ tích với hàng trăm loại hoa khác nhau, được bày trí đẹp mắt. Chẳng có gì tuyệt hơn khi ghé quán, chọn cho mình những góc tĩnh, ngắm hoa, nghe một bản nhạc Pháp và thưởng thức không gian vẫn còn nhộn nhịp ngoài kia.
+                            Coffee House is a little Paris feeling of the owner who is a lover of Paris, located on a small street of Thao Dien, District 2. If you are a person who likes to see flowers, here is like a fairy garden with flowers. Hundreds of different types of flowers, beautifully decorated. There is nothing better than visiting the shop, choosing a quiet corner, watching flowers, listening to a French music and enjoying the still bustling space out there.
                         </p>
                     </div>
                 </div>
