--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <nav class="nav-menu ">
-                    <a href="#" class="menu-item">Trang chủ</a>
-                    <a href="#" class="menu-item">Giới thiệu</a>
-                    <a href="#" class="menu-item">Sản phẩm</a>
-                    <a href="#" class="menu-item">Trang chủ</a>
-                    <a href="#" class="menu-item">Tin tức</a>
+            <div class="row nav-menu">
+                    <nav class="left-menu l-5">
+                        <a href="#" class="menu-item">Trang chủ</a>
+                        <a href="#" class="menu-item">Giới thiệu</a>
+                        <a href="#" class="menu-item">Sản phẩm</a>
+                    </nav>
+                    <div class="logo-img l-2">
+                        <img src="./assets/img/slider/logo.png" alt="" class="logo "> 
+                    </div>
+                    <nav class="right-menu l-5">
+                        <a href="#" class="menu-item">Tin tức</a>
                     <a href="#" class="menu-item">Dịch vụ</a>
                     <a href="#" class="menu-item">Liên hệ</a>
-                </nav>
-                <img src="./assets/img/slider/logo.png" alt="" class="logo ">
+                    </nav>    
             </div>
         </div>
     </header>
